--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Custom
-samples/
+/personal/*
+!/personal/.gitkeep
 
+/fddp
 # Created by https://www.gitignore.io/api/intellij,go,linux,osx,windows
 
 ### Intellij ###
@@ -9,6 +11,7 @@ samples/
 *.iml
 
 ## Directory-based project format:
+
 .idea/
 # if you remove the above rule, at least ignore the following:
 
